[PRMT-1149] Removed dummy endpoints
